--- a/ZendalApp/www/index.html
+++ b/ZendalApp/www/index.html
@@ -119,8 +119,7 @@
         <ion-tabs>
           <ion-tab tab="tab-mapa-restricciones">
             <ion-nav>
-              <iframe allow="geolocation" class="iframe-mapa"
-                src="https://comunidadmadrid.maps.arcgis.com/apps/webappviewer/index.html?id=4bc4b611915740cc99fdc1a10954b043"></iframe>
+              <iframe allow="geolocation" id="ifrs" class="iframe-mapa" src="https://comunidadmadrid.maps.arcgis.com/apps/webappviewer/index.html?id=4bc4b611915740cc99fdc1a10954b043"></iframe>
             </ion-nav>
           </ion-tab>
           <ion-tab tab="tab-mapa-incidencia-municipios">
