--- a/ZendalApp/www/estadisticas.html
+++ b/ZendalApp/www/estadisticas.html
@@ -61,6 +61,8 @@
   <script type="module">
     import { menuController } from 'https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/index.esm.js';
     import { alertController } from 'https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/index.esm.js';
+    import { loadingController } from 'https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/index.esm.js';
+    window.loadingController = loadingController;
     window.menuController = menuController;
     window.alertController = alertController;
   </script>
