--- a/ZendalApp/www/datosvacunacion.html
+++ b/ZendalApp/www/datosvacunacion.html
@@ -35,7 +35,7 @@
   <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
   <meta name="color-scheme" content="light dark">
   <link rel="stylesheet" href="css/index.css">
-  <title>Hello World</title>
+  <title>DATOS VAC ESP</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
   <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
@@ -137,7 +137,7 @@
                         <div>
                           <h3>VACUNAS RECIBIDAS</h3>
                           <h3><strong><p id="dosisDistribuidas"></p></strong></h3>
-                          <p>para <strong>6779888</strong> habitantes</strong>
+                          <p>para <strong>6.779.888</strong> habitantes</strong>
                         </div>
                         <canvas id="myChartMadridEntregadas"></canvas>
 
@@ -148,7 +148,7 @@
                         <div>
                           <h3>VACUNAS ADMINISTRADAS</h3>
                           <h3><strong><p id="dosisAdministradas"></p></strong></h3>
-                          <p>El <strong><span id="porcentajeAdministradasTotal"></span>&nbsp;</strong>de vacunas recibidas ya han sido administradas</p>
+                          <p>El <strong><span id="porcentajeAdministradasTotal"></span>&nbsp;%</strong> de vacunas recibidas ya han sido administradas</p>
                           
                         </div>
                         <canvas id="myChartMadridAdministradas"></canvas>
@@ -198,10 +198,12 @@
                         <div>
                           <h3>VACUNAS RECIBIDAS</h3>
                           <h3><strong><p id="dosis_totales_ES"></p></strong></h3>
-                          <p><span>para <strong>47329000</strong> habitantes</span></p>
+                          <p><span>para <strong>47.329.000</strong> habitantes</span></p>
                           <canvas id="myChart"></canvas>
                         </div>
                         <p id="chart1_text"></p>
+                        <canvas id="graficoSabores"></canvas>
+                        <br>                       
                       </section>
                     </div>
                     <div>
