--- a/ZendalApp/www/datosvacunacion.html
+++ b/ZendalApp/www/datosvacunacion.html
@@ -153,6 +153,7 @@
                         </div>
                         <canvas id="myChartMadridAdministradas"></canvas>
                         <p>El <strong><span id="porcentajeAlMenosUnaDosisMadrid"></span>&nbsp;%</strong> ha recibido al menos una dosis</p>
+                        <p>Última jornada <strong><span id="dosisUltimaJornadaM"></span></strong> dosis</p>
                       </section>
                     </div>
                     <div><img src="img/vacunas-completas.png" alt="Dosis completas subministradas" width="150"
@@ -165,6 +166,7 @@
                           </p>
                         </div>
                         <canvas id="myChartMadridCompletadas"></canvas>
+                        <p>Última jornada <strong><span id="inmunizadosUltimaJornadaM"></span></strong> inmunizados</p>
                         <p hidden>Personas que han recibido las dos dosis de la vacuna.<br>Suponen un
                           <strong><span id="porcentajeCompletas"></span>&nbsp;%</strong>
                           de las dosis administradas.<br>Supone el <strong> <span
@@ -217,6 +219,7 @@
                           <p id="chart2_text"></p>
                           <canvas id="myChartAdministradas"></canvas>
                           <p>El <strong><span id="porcentajeAlMenosUnaDosisEsp"></span>&nbsp;%</strong> ha recibido al menos una dosis</p>
+                          <p>Última jornada <strong><span id="dosisUltimaJornadaE"></span></strong> dosis</p>
                         </div>
                         
                       </section>
@@ -231,6 +234,7 @@
                           <h3><strong><p id="pauta_comp_ES"></p></strong></h3>
                           <p><strong><span id="porcentajePoblacionInmuneES"></span>&nbsp;%</strong>de la población</p>
                           <canvas id="myChartCompletada"></canvas>
+                          <p>Última jornada <strong><span id="inmunizadosUltimaJornadaE"></span></strong> inmunizados</p>
                         </div>
                         <!--<p id="chart3_text"></p>-->
                       </section>
