--- a/ZendalApp/www/datosvacunacion.html
+++ b/ZendalApp/www/datosvacunacion.html
@@ -49,6 +49,7 @@
     window.loadingController = loadingController;
     window.menuController = menuController;
     window.alertController = alertController;
+    
   </script>
 
 
@@ -126,6 +127,9 @@
           <!--INICIO SLIDE 1: EVOLUCIÓN MADRID POR FECHA -->
           <ion-slide>
             <ion-card>
+              <ion-badge color="danger">nuevo!</ion-badge>
+              <ion-button onclick="vistaAutocita()">AUTOCITA COVID MADRID</ion-button>
+              
               <div>
                 <section>
                   <div>
