--- a/ZendalApp/www/datosvacunacion.html
+++ b/ZendalApp/www/datosvacunacion.html
@@ -17,7 +17,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<html>
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
