--- a/ZendalApp/www/index.html
+++ b/ZendalApp/www/index.html
@@ -117,11 +117,11 @@
       <ion-content class="ion-padding">
 
         <ion-tabs>
-          <ion-tab tab="tab-mapa-restricciones">
+          <!-- <ion-tab tab="tab-mapa-restricciones">
             <ion-nav>
               <iframe allow="geolocation" id="ifrs" class="iframe-mapa" src="https://comunidadmadrid.maps.arcgis.com/apps/webappviewer/index.html?id=4bc4b611915740cc99fdc1a10954b043"></iframe>
             </ion-nav>
-          </ion-tab>
+          </ion-tab> -->
           <ion-tab tab="tab-mapa-incidencia-municipios">
             <ion-nav>
               <iframe allow="geolocation" class="iframe-mapa"
@@ -135,10 +135,10 @@
             </ion-nav>
           </ion-tab>
           <ion-tab-bar slot="bottom" color="danger">
-            <ion-tab-button tab="tab-mapa-restricciones">
+            <!-- <ion-tab-button tab="tab-mapa-restricciones">
               <ion-icon name="hand-right-outline"></ion-icon>
               <ion-label>Restricciones</ion-label>
-            </ion-tab-button>
+            </ion-tab-button> -->
             <ion-tab-button tab="tab-mapa-incidencia-municipios">
               <ion-icon name="business-outline"></ion-icon>
               <ion-label>Municipio</ion-label>
